<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_menu_data"
            android:title="@string/menu_data" />
        <item
            android:id="@+id/nav_web_view"
            android:icon="@drawable/ic_menu_web_view"
            android:title="@string/menu_web_view" />
        <item
            android:id="@+id/nav_background_task"
            android:icon="@drawable/ic_menu_web_view"
            android:title="@string/menu_background_task" />
        <item
            android:id="@+id/nav_audio_record"
            android:icon="@drawable/ic_menu_audio_record"
            android:title="@string/menu_audio_record" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_temperature"
            android:icon="@drawable/ic_menu_temperature"
            android:title="@string/menu_temperature" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_temperature"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_files"
            android:icon="@drawable/ic_menu_temperature"
            android:title="@string/menu_files" />
    </group>
</menu>